Stopped user zoom in on mobile

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
     border-radius: 3px;
     width: 20px;
     height: 20px;
+    touch-action: manipulation;
 }
 
 .ui-button:hover {
